Fixes button wrap bug, section margins, venue locations

--- a/less/components/twitter-signup.less
+++ b/less/components/twitter-signup.less
@@ -1,8 +1,9 @@
-section#twitter-signup {
-    background: black;
-    a.button {
-      display: inline-block;
-      background: #55acee;
-    }
-    padding: 40px 10px;
+#twitter-signup {
+  background: black;
+  padding: 4rem 1rem;
+
+  .button {
+    background: @twitter-blue;
+    display: inline-block;
+  }
 }
