--- a/less/layouts/default.less
+++ b/less/layouts/default.less
@@ -15,7 +15,7 @@ main {
 }
 
 section {
-  margin: 2.5rem auto;
+  margin: 2.5rem auto 6rem;
   padding: 0 1rem;
   max-width: @large-tablet + 80px;
 
@@ -24,22 +24,18 @@ section {
   }
 
   @media screen and (min-width: @large-phone) {
-    margin-bottom: 3rem;
     padding: 0 2.5rem;
   }
 
   @media screen and (min-width: @small-tablet) {
-    margin-bottom: 4rem;
     padding: 0 3rem;
   }
 
   @media screen and (min-width: @large-tablet) {
-    margin-bottom: 5rem;
     padding: 0 3.5rem;
   }
 
   @media screen and (min-width: @small-desktop) {
-    margin-bottom: 6rem;
     padding: 0 4rem;
   }
 }
